...
    <string name="profile">Profile</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="remove">Remove</string>
    <string name="undo">Undo</string>
    <string name="close">Close</string>
    <string name="duplicate">Duplicate</string>
    <string name="clear">Clear</string>
    <string name="logout">Log out</string>
    <string name="navigate_up">Navigate up</string>
    <string name="remove_item">Remove %1$s</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>

    <string name="login_successful">You are logged in as</string>

...
    <string name="login_signup_email">Enter your email</string>
    <string name="login_password">Enter your password</string>
    <string name="login">Sign in</string>
    <string name="forgotten_password">Did you forget the password? Click here</string>
    <string name="login_google">Sign in with Google</string>
    <string name="login_signup">Don\'t have an account? Sign up</string>
    <string name="signup_name">Enter your full name</string>
    <string name="signup_password">Create a password</string>
    <string name="signup_password_confirm">Confirm your password</string>
    <string name="signup">Sign up</string>
    <string name="signup_login">Already have an account? Sign in</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="change_password">Change your password</string>
    <string name="current_password">Enter current password</string>
...
    <string name="or">or</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="back_to_login">Back to sign in</string>

    <string name="warning_home">Add your first expense</string>
    <string name="warning_budget">Add your first income</string>
    <string name="warning_labels">Add your first label</string>

    <string name="expenses_today">Expenses today</string>
    <string name="expenses_budget">Expense on budget</string>
    <string name="this_month">Expenses this month</string>
    <string name="this_year_next">Expenses this year</string>
...
    <string name="your_propic">Your profile picture</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="edit_propic">Select your profile picture</string>
    <string name="edit_full_name">Edit your full name</string>
    <string name="no_expenses">No expenses</string>
    <string name="no_incomes">No incomes</string>
    <string name="enter_your_budget">Enter your monthly budget</string>

    <string name="annual_budget">Annual budget</string>
    <string name="incomes">Incomes</string>
    <string name="edit_budget">Edit budget</string>
    <string name="delete_budget">Delete budget</string>

    <string name="housing">Housing</string>
    <string name="groceries">Groceries</string>
    <string name="personal_care">Personal Care</string>
    <string name="entertainment">Entertainment</string>
    <string name="education">Education</string>
    <string name="dining">Dining</string>
    <string name="health">Health</string>
    <string name="transportation">Transportation</string>
    <string name="miscellaneous">Miscellaneous</string>

    <string name="manage_labels">Manage labels</string>
    <string name="manage_categories">Manage categories</string>
    <string name="categories">Categories</string>
    <string name="housing_description">Manage your living expenses including rent or mortgage, property taxes, home insurance, utilities like water and electricity, and home maintenance.</string>
    <string name="groceries_description">Keep track of daily essentials, including food shopping and personal hygiene products.</string>
    <string name="personal_care_description">Categorize expenses for your personal well-being, such as grooming, haircuts, clothing, and footwear.</string>
    <string name="entertainment_description">Budget for leisure activities including hobbies, theater, streaming subscriptions, travel, and vacations.</string>
    <string name="education_description">Track investments in learning, such as tuition fees, books, supplies, and professional development courses.</string>
    <string name="dining_description">Manage your dining experiences, including restaurants, cafés, bars, fast food, and takeout meals.</string>
    <string name="health_description">Monitor your healthcare spending, covering insurance premiums, medical bills, medications, and dental or vision care.</string>
    <string name="transportation_description">Track costs related to commuting, such as car payments, fuel, insurance, vehicle maintenance, and public transport fares.</string>
...
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="save">Save</string>

    <string name="delete_confirmation">Remove from your Account and all connected devices?</string>
    <string name="delete_label_confirmation">Remove from your Account and all connected devices? The associated expenses will not be deleted.</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="reset_password_confirmation">A reset link will be sent to your email address to reset and change your password.</string>
    <string name="send_email">Send email</string>

    <string name="shortcut_new_expense">New expense</string>
    <string name="shortcut_new_income">New income</string>

...
