...
                    ),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                HorizontalDivider(modifier = Modifier.padding(horizontal = 16.dp))
                Spacer(modifier = Modifier.height(8.dp))
                TextButton(
                    modifier = Modifier.testTag("auth_toggle_mode"),
                    onClick = onToggleAuthMode,
                    enabled = !isLoading
                ) {
                    Text(
                        text = stringResource(
                            id = if (uiState.isSigningUp) R.string.signup_login else R.string.login_signup
...
                Spacer(modifier = Modifier.height(16.dp))

                Button(
                    onClick = onAuthClick,
                    enabled = !isLoading,
                    shapes = ButtonDefaults.shapes(),
                    modifier = Modifier.testTag("login_button")
                ) {
                    Icon(
                        painter = painterResource(id = R.drawable.ic_login_filled),
                        contentDescription = null,
                        modifier = Modifier.size(ButtonDefaults.IconSize)
                    )
                    Spacer(Modifier.size(ButtonDefaults.IconSpacing))
                    Text(text = stringResource(id = if (uiState.isSigningUp) R.string.signup else R.string.login))
                }

                TextButton(
                    modifier = Modifier.testTag("auth_forgot_password"),
                    onClick = onForgotPasswordClick,
                    enabled = !uiState.isSigningUp && !isLoading
                ) {
                    Text(
                        text = stringResource(
                            id = if (uiState.isSigningUp) R.string.or else R.string.forgotten_password
...
