...
            testTag = "transaction_duplicate",
            onClick = onDuplicate
        ),
        MenuItem.Resource(
            iconRes = R.drawable.ic_delete_outline,
            textRes = R.string.delete,
            testTag = "transaction_delete",
            onClick = onDelete
        )
    )
    if (transaction is Expense) {
        items.add(
            0,
            MenuItem.Resource(
                iconRes = R.drawable.ic_sell_outline,
                textRes = R.string.labels,
                testTag = "transaction_labels",
                onClick = onLabels
            )
        )
    }

    AppBottomSheet(
...
